# docker-fastapi-poetry

./: README.md  dockerfile  pyproject.toml  python3.6-alpine3.8.dockerfile  python3.6.dockerfile  python3.7-alpine3.8.dockerfile  python3.7.dockerfile  python3.8-alpine3.10.dockerfile  python3.8-slim.dockerfile  python3.8.dockerfile  renovate.json  requirements.txt
.github/workflows/: docker-build-push.yml  push-docker.yml
scripts/: docker-build-push.py
