[tool.poetry]
name = "docker-fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["q267009886.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
PyGithub = "1.59.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
